<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.loboevolution</groupId>
    <artifactId>LoboHTML</artifactId>
    <version>1.0</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <buildDirectory>../target/LoboHTML</buildDirectory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboW3C</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboCommon</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboXalan</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboApi</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.loboevolution</groupId>
            <artifactId>LoboParser</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
    </dependencies>

    <build>
        <directory>${buildDirectory}</directory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.1</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.4.1</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependencies</report>
                             <report>index</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

</project>